# rust-ecosystem

./: Cargo.toml  README.md  test.rest
examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  chat.rs  enum.rs  err.rs  minginx.rs  more.rs  serde.rs  shortener.rs  tokio1.rs  tokio2.rs
src/: error.rs  main.rs
