[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["--cfg", "tokio_unstable"] # tokion-console 功能支持

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
thiserror = "2.0.6"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
axum-macros = "0.4.2"
blake3 = "1.5.5"
bytes = "1.9.0"
console-subscriber = "0.4.1"
dashmap = "6.1.0"
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
nanoid = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }

